--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ source-code: https://github.com/CollectionBuilder/collectionbuilder-gh
 # SITE SETTINGS
 #
 # title of site appears in banner
-title: Test 
+title: Test Test Test
 # tagline, a short phrase that will appear throughout the site in the top banner
 tagline: a test for creating simple digital exhibits
 # description appears in meta tags and other locations
