--- a/_config.yml
+++ b/_config.yml
@@ -9,10 +9,10 @@
 #
 # url is site domain, full URL to the production location of your collection
 # on GitHub Pages follows the pattern username.github.io
-#url: https://awazhu.github.io 
+url: https://awazhu.github.io 
 # baseurl is path to location on the domain if necessary e.g. /digital/hjccc
 # on GitHub Pages it is your github repository's name prefixed with a /
-#baseurl: /cb 
+baseurl: /cb 
 # location of code, the full url to your github repository
 source-code: https://github.com/awazhu/cb
 
