--- a/_config.yml
+++ b/_config.yml
@@ -34,7 +34,7 @@ author: awaz
 #
 # Set the metadata for your collection (the name of the csv file in your _data directory that describes the objects in your collection) 
 # Use the filename of your CSV **without** the ".csv" extension! E.g. _data/demo-metadata.csv --> "demo-metadata"
-metadata: C001_MetadataSheet
+metadata: C001
 
 ##########
 # Site/Organization Branding 
